# simdif

./: .gitignore  LICENSE  README.md  pyproject.toml
src/simdif/: .definitions.txt.kate-swp  __init__.py  definitions.md  definitions.txt  simdif.py
src/simdif/metrics/: __init__.py  banberra.py  bray_curtis.py  canberra.py  chebyshev.py  cosine.py  cosine_set.py  damerau_levenshtein.py  dice_sorensen.py  euclidean.py  hamming.py  hedgehog.py  index_of_dissimilarity.py  jaccard.py  kendall_tau.py  kendall_tau_b.py  kulczynski.py  mahalanobis.py  manhattan.py  minkowski.py  osa.py  overlap.py  pearson.py  rogers_tanimoto.py  russel_rao.py  smc.py  sokal_sneath_i.py  sokal_sneath_iii.py  soundex.py  spearman.py  tversky.py
tests/: test_bray_curtis.py  test_canberra.py  test_chebyshev.py  test_cosine.py  test_cosine_set.py  test_damerau_levenshtein.py  test_dice_sorensen.py  test_euclidean.py  test_hamming.py  test_index_of_dissimilarity.py  test_jaccard.py  test_kendall_tau.py  test_kendall_tau_b.py  test_osa.py  test_simdif.py
