[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simdif"
version = "0.1.0"
description = "A collection of similarity, difference, distance, and scoring metrics."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "C. Shaun Wagner", email = "cs@kainaw.com" }
]

# Add runtime dependencies here if needed
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
